--- a/src/sass/abstracts/_vars.scss
+++ b/src/sass/abstracts/_vars.scss
@@ -8,12 +8,16 @@ $pink-dark: #403031;
 $grey-light: #5f7078;
 $grey-dark: #2d373c;
 
+$invalid: #ba522d;
+$nice: #65914b;
+
 $white: #fff;
 
 $color-grey-light-1: #f7f7f7;
 
 $black: #000;
 $lightGrey: #777;
+$lightGrey-2: #999;
 
 $border-grey: #eee;
 
