--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -26,3 +26,8 @@
   position: relative;
   padding: 15rem 0;
 }
+
+.section-booking{
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, $secondaryColor, $firstColor);
+}
