--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn{
+  &,
   &:link,
   &:visited{
     position: relative;
@@ -8,6 +9,12 @@
     padding: 1.5rem 4rem;
     border-radius: 10rem;
     transition: all .2s;
+    z-index: 100;
+
+    //STYLES FOR <BUTTON> ELEMENT
+
+    border: none;
+    cursor: pointer;
   }
   &:hover{
     transform: translateY(-.3rem);
