--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,6 +21,8 @@
 @import "components/card";
 @import "components/story";
 @import "components/bg-video";
+@import "components/book";
+@import "components/form";
 
 @import "pages/home";
 
