--- a/src/sass/abstracts/_vars.scss
+++ b/src/sass/abstracts/_vars.scss
@@ -7,6 +7,7 @@ $pink-dark: #403031;
 
 $grey-light: #5f7078;
 $grey-dark: #2d373c;
+$grey-dark-1: #333;
 
 $invalid: #ba522d;
 $nice: #65914b;
@@ -18,6 +19,7 @@ $color-grey-light-1: #f7f7f7;
 $black: #000;
 $lightGrey: #777;
 $lightGrey-2: #999;
+
 
 $border-grey: #eee;
 
