nav functionality finished. nav icon not finished

--- a/src/sass/abstracts/_vars.scss
+++ b/src/sass/abstracts/_vars.scss
@@ -1,6 +1,6 @@
 //COLORS
-$firstColor: rgba(88, 70, 46, 0.8);
-$secondaryColor: rgba(208, 191, 171, 0.8);
+$firstColor: rgb(88, 70, 46);
+$secondaryColor: rgb(208, 191, 171);
 
 $pink-light: #8e6a6d;
 $pink-dark: #403031;
