--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -40,3 +40,29 @@
     transform: translate(0);
   }
 }
+
+@keyframes navMoving {
+  0%{
+    opacity: 0;
+    transform: translateX(-15rem);
+  }
+
+  100%{
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes navMoving2 {
+  0%{
+    opacity: 1;
+    transform: translate(0);
+  }
+
+  100%{
+    opacity: 0;
+    transform: translateX(-100rem);
+  }
+}
+
+
