--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,6 +23,7 @@
 @import "components/bg-video";
 @import "components/book";
 @import "components/form";
+@import "components/popup";
 
 @import "pages/home";
 
