--- a/src/sass/abstracts/_vars.scss
+++ b/src/sass/abstracts/_vars.scss
@@ -28,6 +28,9 @@ $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
 
+$gutter-horizontal-small: 3rem;
+$gutter-vertical-small: 4rem;
+
 //IMG PATH
 $img-greek8-path: "../img/greek8.jpg";
 $img-greek4-path: "../img/greek4.jpg";
