--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -6,6 +6,10 @@
   border-radius: .3rem;
   box-shadow: 0 1.5rem 4rem rgba($black, .15);
   transition: transform .2s;
+
+  @include adaptive(tab-port){
+    padding: 2rem;
+  }
   &:hover{
     transform: translateY(-1.5rem) scale(1.03);
   }
@@ -16,5 +20,10 @@
     background-image: linear-gradient(to right bottom, $firstColor, $secondaryColor);
     -webkit-background-clip: text;
     color: transparent;
+
+    @include adaptive(tab-port){
+      font-size: 4rem;
+      margin-bottom: 0;
+    }
   }
 }
