--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,6 +3,11 @@
   background-color: $grey-dark-1;
   font-size: 1.4rem;
 
+  @include adaptive(tab-port){
+    padding: 5rem;
+    font-size: 1.2rem;
+  }
+
   &__logo-box{
     text-align: center;
   }
@@ -14,6 +19,11 @@
     display: inline-block;
     border-top: .1rem solid $lightGrey;
     padding-top: 2rem;
+
+    @include adaptive(tab-port){
+      width: 100%;
+      text-align: center;
+    }
   }
   &__list{
     list-style: none;
@@ -23,6 +33,10 @@
 
       &:not(:last-child){
         margin-right: 1.5rem;
+
+        @include adaptive(tab-land){
+          margin-right: 1.3rem;
+        }
       }
     }
   }
@@ -50,5 +64,10 @@
     padding-top: 2rem;
     width: 85%;
     float: right;
+
+    @include adaptive(tab-port){
+      width: 100%;
+      float: none;
+    }
   }
 }
