--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -8,8 +8,25 @@
 
 html {
   font-size: 62.5%;
+
+  @include adaptive(tab-land){
+    font-size: 56.25%;
+  }
+  @include adaptive(tab-port){
+    font-size: 50%;
+  }
+  @include adaptive(big-desktop){
+    font-size: 75%;
+  }
 }
 
 body{
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include adaptive(tab-port){
+    padding: 0;
+  }
 }
+
+
