--- a/src/sass/base/_typografy.scss
+++ b/src/sass/base/_typografy.scss
@@ -4,8 +4,6 @@ body{
   font-size: $default-font-size;
   line-height: 1.7;
   color: #777;
-  padding: 3rem;
-
 }
 
 .heading-primary{
@@ -19,6 +17,11 @@ body{
     font-weight: 400;
     letter-spacing: 3.6rem;
     animation: moveToRight 1s ease-out;
+
+    @include adaptive(phone){
+      font-size: 3.85rem;
+      letter-spacing: 3.05rem;
+    }
   }
   &--sub{
     display: block;
@@ -26,6 +29,11 @@ body{
     font-weight: 700;
     letter-spacing: .63rem;
     animation: moveToLeft 1s ease-out;
+
+    @include adaptive(phone){
+      font-size: 1.3rem;
+      letter-spacing: .55rem;
+    }
   }
 }
 
@@ -39,6 +47,14 @@ body{
   color: transparent;
   letter-spacing: .2rem;
   transition: all .2s;
+
+  @include adaptive(tab-port){
+    font-size: 3rem;
+  }
+
+  @include adaptive(phone){
+    font-size: 2.5rem;
+  }
 
   &:hover{
     transform: scaleX(1.1) scaleY(1.1);
