--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -1,8 +1,20 @@
 .u-center-text{ text-align: center !important; }
 
-.u-mb-big{ margin-bottom: 8rem !important; }
+.u-mb-big{
+  margin-bottom: 8rem !important;
+
+  @include adaptive(tab-port){
+    margin-bottom: 6rem !important;
+  }
+}
 .u-mb-medium{ margin-bottom: 4rem !important; }
 .u-mb-small{ margin-bottom: 1.5rem !important; }
 
 .u-mt-big{ margin-top: 8rem !important; }
-.u-mt-huge{ margin-top: 10rem !important; }
+.u-mt-huge{
+  margin-top: 10rem !important;
+
+  @include adaptive(tab-port){
+    margin-top: 6rem !important;
+  }
+}
