--- a/src/sass/components/_book.scss
+++ b/src/sass/components/_book.scss
@@ -4,8 +4,17 @@
   background-position: top;
   border-radius: .3rem;
 
+  @include adaptive(tab-port){
+    background-image: linear-gradient(105deg, rgba($white, .9) 0%, rgba($white, .9) 100%), url("../img/greek8.jpg");
+  }
+
   &__form{
     width: 50%;
     padding: 6rem;
+
+    @include adaptive(tab-port){
+      width: 90%;
+      padding: 3rem;
+    }
   }
 }
