--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -123,6 +123,7 @@
 
   &__price-box{
     color: $white;
+    margin-bottom: 6rem;
   }
 
   &__price-only{
@@ -136,4 +137,49 @@
     font-weight: 100;
   }
 
+  @include adaptive(tab-port){
+
+    height: auto;
+
+    &__side{
+      position: relative;
+      height: auto;
+      border-radius: .3rem;
+      padding-bottom: 4rem;
+
+      &--back{
+        transform: rotateY(0);
+        padding: 6rem 3rem 3rem 3rem;
+        margin-top: -4.5rem;
+
+        -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+      }
+    }
+
+    &:hover &__side--front{
+      transform: rotateY(0);
+    }
+
+    &__cta{
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: translate(0);
+      width: 100%;
+      text-align: center;
+    }
+
+    &__price-box{
+      margin-bottom: 2rem;
+    }
+
+    &__price-value{
+      font-size: 6rem;
+    }
+
+  }
+
 }
+
+
