--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -25,6 +25,10 @@
     &::-webkit-input-placeholder{
       color: $lightGrey-2;
     }
+
+    @include adaptive(tab-port){
+      width: 100%;
+    }
   }
 
   &__input:placeholder-shown + &__label{
@@ -44,6 +48,12 @@
   &__radio-group{
     width: 49%;
     display: inline-block;
+
+    @include adaptive(tab-port){
+      width: 100%;
+      display: block;
+      margin-bottom: 2rem;
+    }
   }
   &__radio-input{
     display: none;
