--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -2,8 +2,17 @@
   max-width: $grid-width;
   margin: 0 auto;
 
+  @include adaptive(tab-port){
+    max-width: 50rem;
+    padding: 0 3rem;
+  }
+
   &:not(:last-child){
     margin-bottom: $gutter-vertical;
+
+    @include adaptive(tab-port){
+      margin-bottom: 4rem;
+    }
   }
 
   @include clearfix;
@@ -13,6 +22,15 @@
 
     &:not(:last-child){
       margin-right: $gutter-horizontal;
+
+      @include adaptive(tab-port){
+        margin-right: 0;
+        margin-bottom: 4rem;
+      }
+    }
+
+    @include adaptive(tab-port){
+      width: 100% !important;
     }
   }
 
