--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,7 +4,13 @@
   background-size: cover;
   background-position: top;
   position: relative;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+  @include adaptive(phone){
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
+  }
   &__logo-box{
     position: absolute;
     top: 4rem;
