--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -2,17 +2,25 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+
+  @include adaptive(tab-port){
+    padding: 25rem 0 30rem 0;
+  }
 }
 
 .section-features{
   margin-top: -20vh;
   padding: 20rem 0;
-  background-image: linear-gradient(to left top, $firstColor, $secondaryColor), url($img-greek4-path);
+  background-image: linear-gradient(to left top, rgba($firstColor, .8), rgba($secondaryColor, .8)), url($img-greek4-path);
   background-size: cover;
 
   transform: skewY(-7deg);
   & > *{
     transform: skewY(7deg);
+  }
+
+  @include adaptive(tab-port){
+    padding: 10rem 0;
   }
 }
 
@@ -20,14 +28,26 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -10vh;
+
+  @include adaptive(tab-port){
+    padding: 20rem 0 5rem 0;
+  }
 }
 
 .section-stories{
   position: relative;
   padding: 15rem 0;
+
+  @include adaptive(tab-port){
+    padding: 5rem 0;
+  }
 }
 
 .section-booking{
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, $secondaryColor, $firstColor);
+
+  @include adaptive(tab-land){
+    padding: 5rem;
+  }
 }
