some popup fixes

--- a/src/sass/base/_typografy.scss
+++ b/src/sass/base/_typografy.scss
@@ -11,6 +11,10 @@ body{
   text-transform: uppercase;
   margin: 0 -3.6rem 6rem 0;
   backface-visibility: hidden;
+
+  @include adaptive(phone){
+    margin: 0 -2.5rem 6rem 0;
+  }
   &--main{
     display: block;
     font-size: 6rem;
@@ -19,8 +23,8 @@ body{
     animation: moveToRight 1s ease-out;
 
     @include adaptive(phone){
-      font-size: 3.85rem;
-      letter-spacing: 3.05rem;
+      font-size: 3.6rem;
+      letter-spacing: 2.5rem;
     }
   }
   &--sub{
@@ -31,8 +35,8 @@ body{
     animation: moveToLeft 1s ease-out;
 
     @include adaptive(phone){
-      font-size: 1.3rem;
-      letter-spacing: .55rem;
+      font-size: 1.2rem;
+      letter-spacing: .45rem;
     }
   }
 }
