--- a/src/sass/components/_story.scss
+++ b/src/sass/components/_story.scss
@@ -8,6 +8,10 @@
   padding: 6rem;
   transform: skewX(-12deg);
 
+  @include adaptive(phone){
+    padding: 3rem;
+  }
+
   @include adaptive(tab-port){
     width: 100%;
   }
@@ -39,7 +43,9 @@
       margin: 0 5rem 1rem 0;
     }
     @include adaptive(phone){
+      float: none;
       left: 0;
+      margin: 0 auto;
     }
   }
 
@@ -56,6 +62,10 @@
 
   &__text{
     padding-top: 2rem;
+
+    @include adaptive(phone){
+      text-align: center;
+    }
 
     p{
       font-size: $default-font-size;
