--- a/src/sass/components/_story.scss
+++ b/src/sass/components/_story.scss
@@ -37,6 +37,8 @@
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     margin-right: 4rem;
+    overflow: hidden;
+    border-radius: 50%;
 
     @include adaptive(tab-port){
       left: -1.5rem;
@@ -50,9 +52,9 @@
   }
 
   &__img{
-    height: 15rem;
-    width: 15rem;
+    height: 100%;
     border-radius: 10rem;
+    transform: translateX(-3rem) scale(1.2);
     transition: all .5s;
 
 
@@ -61,7 +63,6 @@
   }
 
   &__text{
-    padding-top: 2rem;
 
     @include adaptive(phone){
       text-align: center;
@@ -93,7 +94,7 @@
 
   &:hover &__img{
     filter: blur(.3rem) brightness(80%);
-
+    transform: translateX(-3rem) scale(1);
   }
 
 }
