--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -103,6 +103,10 @@
       background-image: linear-gradient(30deg, transparent 0%, transparent 50%, $white 50%);
       background-size: 300%;
       transition: all .6s;
+
+      span{
+        margin-right: 1.5rem;
+      }
     }
 
     &:hover,
